--- a/src/default.html
+++ b/src/default.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>分账资金存管系统</title>
+  <title>项目管理</title>
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="full-screen" content="yes" />
   <meta name="x5-fullscreen" content="true" />
-  <link rel="stylesheet" href="/res/css/app.css.less">
+  <link rel="stylesheet" href="/res/css/antd.css">
 </head>
 
 <body>
